--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -1418,7 +1418,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="DbV-Kl-WWD" kind="push" id="CxP-LX-BLz"/>
+                                    <segue destination="DbV-Kl-WWD" kind="push" identifier="DetailToHavingSegue" id="CxP-LX-BLz"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GQ3-hH-2jV">
@@ -1435,7 +1435,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="eGx-Id-dmB" kind="push" id="XUD-FR-9qH"/>
+                                    <segue destination="eGx-Id-dmB" kind="push" identifier="DetailToMissingSegue" id="XUD-FR-9qH"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1X3-IE-c5D">
@@ -1705,12 +1705,7 @@
         <class className="EnterViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EnterViewController.h"/>
             <relationships>
-                <relationship kind="action" name="checkCategorySelected:" candidateClass="UIButton"/>
-                <relationship kind="action" name="checkCountrySelected:" candidateClass="UIButton"/>
-                <relationship kind="action" name="checkSortSelected:" candidateClass="UIButton"/>
-                <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="action" name="submitTap:"/>
-                <relationship kind="action" name="textFieldDoneEditing:"/>
                 <relationship kind="outlet" name="categoryView1" candidateClass="UIView"/>
                 <relationship kind="outlet" name="categoryView2" candidateClass="UIView"/>
                 <relationship kind="outlet" name="countryView" candidateClass="UIView"/>
@@ -1817,6 +1812,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="9gs-bQ-JUX"/>
+        <segue reference="Yy4-Tj-6za"/>
     </inferredMetricsTieBreakers>
 </document>
